<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OperacionActivity">

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_operaciones"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent">
        <RadioButton
                android:text="@string/str_raiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rb_raiz"/>
        <RadioButton
                android:text="@string/str_cuadrado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rb_cuadrado"/>
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rb_cubo" android:text="@string/str_cubo"/>
        <RadioButton
                android:text="@string/str_factorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/rb_factorial"/>
    </RadioGroup>
    <Button
            android:text="@string/str_calcula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_calcula"
            app:layout_constraintTop_toBottomOf="@+id/rg_operaciones" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="64dp" android:layout_marginStart="84dp"
            app:layout_constraintHorizontal_bias="0.293" android:onClick="calculaResultado"/>
</androidx.constraintlayout.widget.ConstraintLayout>