<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/tv_numero" android:text="@string/str_numero"
            app:layout_constraintHorizontal_bias="0.092" app:layout_constraintVertical_bias="0.022"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editNumero"
            app:layout_constraintStart_toEndOf="@+id/tv_numero" android:layout_marginStart="40dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.563"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_factorial"
            app:layout_constraintTop_toBottomOf="@+id/editNumero"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:text="@string/str_selecciona"
            android:onClick="llamadaConResultados" app:iconTint="#202C70"
            app:icon="@android:drawable/ic_input_add" android:background="#0713FA" app:rippleColor="@color/teal_200"
            app:layout_constraintHorizontal_bias="0.502"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tv_resultado"
            app:layout_constraintTop_toBottomOf="@+id/btn_factorial"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.462"/>
    <TextView
            android:text="@string/str_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView"
            tools:text="@string/str_telefono" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/btn_factorial"
            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.084"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/edit_telefono" app:layout_constraintTop_toBottomOf="@+id/btn_factorial"
            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.297"/>
    <Button
            android:text="@string/str_llamar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_llamar"
            app:layout_constraintTop_toBottomOf="@+id/edit_telefono" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.641" android:layout_marginEnd="72dp"
            android:onClick="abreAppLlamada"/>
    <TextView
            android:text="@string/str_mensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginTop="108dp"
            app:layout_constraintHorizontal_bias="0.127"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editTextoMensaje"
            app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintTop_toBottomOf="@+id/btn_llamar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp" android:layout_marginStart="52dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/str_enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_sms"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextoMensaje" android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:onClick="enviarSMS"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editurl"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sms" android:hint="@string/strurlhint"/>
    <Button
            android:text="@string/str_btn_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_url"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editurl" android:onClick="irAURL"/>
    <Button
            android:text="@string/str_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_evento"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_url" android:onClick="agregaEvento"/>
    <Button
            android:text="@string/str_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_map"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501" app:layout_constraintTop_toBottomOf="@+id/btn_evento"
            android:onClick="obtenMapa"/>

</androidx.constraintlayout.widget.ConstraintLayout>